[gd_scene load_steps=7 format=3 uid="uid://b77dqwv8b42lt"]

[ext_resource type="Script" path="res://scenes/monsters/generic_monster/generic_monster.gd" id="1_vliax"]
[ext_resource type="Script" path="res://scenes/game_objects/state_machine/state_machine.gd" id="2_38rv1"]
[ext_resource type="PackedScene" uid="uid://dsrc12ncpkf6w" path="res://ui/battlemap/player/status_effects_ui/status_effects_ui.tscn" id="4_dqndt"]
[ext_resource type="Texture2D" uid="uid://bqlcfti4m2fao" path="res://assets/game_objects/monster_parts/intents/move_intents/red_arrow_move_intent.png" id="5_dum2y"]
[ext_resource type="PackedScene" uid="uid://vfo362uqdox" path="res://scenes/game_objects/status_effects/status_effect_container/status_effect_container.tscn" id="5_f5fod"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jo88s"]

[node name="GenericMonster" type="CharacterBody2D"]
scale = Vector2(5, 5)
script = ExtResource("1_vliax")

[node name="StatusEffectContainer" parent="." node_paths=PackedStringArray("status_effect_ui") instance=ExtResource("5_f5fod")]
status_effect_ui = NodePath("../StatusEffectsUI")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_38rv1")

[node name="StatusControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
mouse_filter = 2

[node name="MoveIntentContainer" type="MarginContainer" parent="StatusControl"]
layout_mode = 0
offset_left = 15.0
offset_top = 7.0
offset_right = 24.0
offset_bottom = 12.0
pivot_offset = Vector2(4.5, 2.5)

[node name="MoveIntentImage" type="TextureRect" parent="StatusControl/MoveIntentContainer"]
layout_mode = 2
texture = ExtResource("5_dum2y")
expand_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jo88s")

[node name="StatusEffectsUI" parent="." instance=ExtResource("4_dqndt")]
offset_left = -1.4
offset_top = 2.0
offset_right = 10.6
offset_bottom = 17.0
